--- a/conference/templates/conference/submit.html
+++ b/conference/templates/conference/submit.html
@@ -37,6 +37,11 @@
     </div>
 
     <div class="form-card">
+      <label for="id_category">Category</label>
+      {{ form.category }}
+    </div>
+
+    <div class="form-card">
       <h3>Co-Authors</h3>
       <div id="coAuthorsContainer"></div>
       <input type="hidden" name="coauthor_count" id="coauthor_count" value="0">
