--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IBSSC 2025 | Assam University Silchar</title>
   <meta name="description" content="Official website of the Indo-Bhutan Social Science Conference 2025, hosted by Assam University Silchar in collaboration with Royal Thimphu College, Bhutan.">
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles1.css' %}">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
   <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
 </head>
