--- a/conference/static/css/styles1.css
+++ b/conference/static/css/styles1.css
@@ -72,7 +72,7 @@ ul {
 /* Hero Section */
 .hero {
   position: relative;
-  background: url("../img/bg.jpg") center/cover no-repeat;
+  background: url("../images/bhutan-mountains2.jpg") center/cover no-repeat;
   color: #fff;
   text-align: center;
   padding: 6rem 1rem 5rem;
