--- a/conference/templates/conference/about.html
+++ b/conference/templates/conference/about.html
@@ -13,20 +13,26 @@
   <div class="about-page-bg"></div>
 
   <!-- Navigation Bar -->
-  <header class="navbar">
-    <div class="logo">
-      <a href="{% url 'home' %}">IBSSC<span>2025</span></a>
-    </div>
-    <ul class="nav-links">
-      <li><a href="{% url 'home' %}">Home</a></li>
-      <li><a href="{% url 'about' %}" class="active">About</a></li>
-      <li><a href="{% url 'cfp' %}">Call for Papers</a></li>
-      <li><a href="{% url 'committee' %}">Committee</a></li>
-      <li><a href="{% url 'dates' %}">Important Dates</a></li>
-      <li><a href="{% url 'registration' %}">Registration</a></li>
-      <li><a href="{% url 'contact' %}">Contact</a></li>
-    </ul>
-  </header>
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <div class="logo">IBSSC<span>2025</span></div>
+  <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+  <ul class="nav-links" id="nav-links">
+    <li><a href="{% url 'home' %}">Home</a></li>
+    <li><a href="{% url 'about' %}" class="active">About</a></li>
+    <li><a href="{% url 'contact' %}">Contact</a></li>
+    <li><a href="{% url 'itinerary' %}">Itinerary</a></li>    
+    <li><a href="{% url 'submit' %}">Submit</a></li>
+    {% if user.is_authenticated %}
+      <li><a href="{% url 'profile' %}">My Profile</a></li>
+      <li><a href="{% url 'logout' %}">Logout</a></li>
+    {% else %}
+      <li><a href="{% url 'signup' %}">Register</a></li>
+      <li><a href="{% url 'login' %}">Login</a></li>
+    {% endif %}
+  </ul>
+</nav>
+
 
   <!-- Main Content -->
   <main class="about-container">
