--- a/conference/static/css/about.css
+++ b/conference/static/css/about.css
@@ -163,6 +163,39 @@ footer {
   transition: opacity 1.5s ease-in-out;
   filter: blur(1.5px);
 }
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.menu-toggle span {
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: flex;
+    margin-left: auto;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: var(--primary-color);
+    padding: 1rem 0;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+}
+
 
 .about-page-bg .slide.active {
   opacity: 0.06;
