--- a/conference/templates/conference/about.html
+++ b/conference/templates/conference/about.html
@@ -13,16 +13,23 @@
   <div class="about-page-bg"></div>
 
   <!-- Navigation Bar -->
-<!-- Navigation Bar -->
 <nav class="navbar">
   <div class="logo">IBSSC<span>2025</span></div>
-  <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+  
+  <!-- Hamburger Menu Button -->
+  <div class="menu-toggle" id="menu-toggle">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
   <ul class="nav-links" id="nav-links">
     <li><a href="{% url 'home' %}">Home</a></li>
     <li><a href="{% url 'about' %}" class="active">About</a></li>
     <li><a href="{% url 'contact' %}">Contact</a></li>
-    <li><a href="{% url 'itinerary' %}">Itinerary</a></li>    
+    <li><a href="{% url 'itinerary' %}">Itinerary</a></li>
     <li><a href="{% url 'submit' %}">Submit</a></li>
+    
     {% if user.is_authenticated %}
       <li><a href="{% url 'profile' %}">My Profile</a></li>
       <li><a href="{% url 'logout' %}">Logout</a></li>
@@ -32,6 +39,7 @@
     {% endif %}
   </ul>
 </nav>
+
 
 
   <!-- Main Content -->
