--- a/conference/templates/conference/about.html
+++ b/conference/templates/conference/about.html
@@ -321,6 +321,47 @@ programme,
       </li>
     </ol>
   </section>
+    <section>
+      <h2> CONTENT OF THE PAPER</h2>
+      <p>Papers should demonstrate critical rigour and make clear their contribution to knowledge.
+ They should also state their implications in relation to the theme of the conference, and their
+ contribution to one or more of research, education, policy or practice.</p>
+    </section>
+    <section>
+      <h2> PUBLICATION</h2>
+      <p> Selected Quality Papers/Articles shall be published in the form of edited book volumes or in the
+ Departmental Journal, The Strategist. The publication fees if any shall be communicated
+ separately on paper acceptance for publication.</p>
+    </section>
+    <section>
+      <h2>FORMAT FOR PRESENTATIONS</h2>
+      <p>  The presentation should be prepared by using Microsoft PowerPoint. The presentation will
+ then be copied onto a pen drive and be ready at your allotted time. Not more than 15
+ PowerPoint slide pages should be included covering background, aims, methodology, and
+ findings.</p>
+    </section>
+
+    <section>
+      <h2> CONFERENCE VENUE</h2>
+      <p> Venue: Royal Thimpu College, Thimpu, Bhutan.</p>
+    </section>
+    <section>
+      <h2> How to Reach</h2>
+      <p>  Conference Coordinated Journey:
+ nd
+ Onward Journey: Starts at 6 Am, 2 September, 2025 from New AlipurDuar (WB), 
+Participants will travel together by bus to Thimphu/Paro, 
+Guided by Dr. Lhato Jamba. 
+Return Journey: Starts 7Am on 6 September, 2025 for New AlipurDuar (WB) 
+th
+ Self-Mode Journey:
+ By Train: Reach New Alipurduar Jn. (WB) or New Cooch Behar (WB) on 1st September 2025
+ By Air: Bagdogra Airport →
+ Transfer to New AlipurDuar (WB) on 1st September 2025
+ & Return from New AlipurDuar (WB)
+ Note: All participants registered for Offline mode for the Conference need to travel in a group.</p>
+    </section>
+    
 
   </main>
 
