--- a/conference/templates/conference/about.html
+++ b/conference/templates/conference/about.html
@@ -345,23 +345,27 @@ programme,
       <h2> CONFERENCE VENUE</h2>
       <p> Venue: Royal Thimpu College, Thimpu, Bhutan.</p>
     </section>
-    <section>
-      <h2> How to Reach</h2>
-      <p>  Conference Coordinated Journey:
- nd
- Onward Journey: Starts at 6 Am, 2 September, 2025 from New AlipurDuar (WB), 
-Participants will travel together by bus to Thimphu/Paro, 
-Guided by Dr. Lhato Jamba. 
-Return Journey: Starts 7Am on 6 September, 2025 for New AlipurDuar (WB) 
-th
- Self-Mode Journey:
- By Train: Reach New Alipurduar Jn. (WB) or New Cooch Behar (WB) on 1st September 2025
- By Air: Bagdogra Airport →
- Transfer to New AlipurDuar (WB) on 1st September 2025
- & Return from New AlipurDuar (WB)
- Note: All participants registered for Offline mode for the Conference need to travel in a group.</p>
-    </section>
-    
+<section class="how-to-reach">
+  <h2>How to Reach</h2>
+
+  <p><em>Conference Coordinated Journey:</em><br>
+  Onward Journey: Starts at 6 AM, 2<sup>nd</sup> September, 2025 from New AlipurDuar (WB),<br>
+  Participants will travel together by bus to Thimphu/Paro,<br>
+  Guided by Dr. Lhato Jamba.<br>
+  Return Journey: Starts 7 AM on 6<sup>th</sup> September, 2025 for New AlipurDuar (WB)
+  </p>
+
+  <p><em>Self-Mode Journey:</em><br>
+  By Train: Reach New Alipurduar Jn. (WB) or New Cooch Behar (WB) on 1<sup>st</sup> September 2025<br>
+  By Air: Bagdogra Airport → Transfer to New AlipurDuar (WB) on 1<sup>st</sup> September 2025<br>
+  & Return from New AlipurDuar (WB)
+  </p>
+
+  <p class="note">
+    <strong>Note:</strong> All participants registered for Offline mode for the Conference need to travel in a group.
+  </p>
+</section>
+
 
   </main>
 
