--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -14,7 +14,7 @@
   <div class="logo">IBSSC<span>2025</span></div>
   <button class="menu-toggle" id="menu-toggle">&#9776;</button>
   <ul class="nav-links" id="nav-links">
-    <li><a href="{% url 'home' %}">Home</a></li>
+    <li><a href="{% url 'home' %}" class="active">Home</a></li>
     <li><a href="{% url 'about' %}">About</a></li>
     <li><a href="{% url 'contact' %}">Contact</a></li>
     <li><a href="{% url 'itinerary' %}">Itinerary</a></li>    
