--- a/conference/templates/conference/index.html
+++ b/conference/templates/conference/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Conference 2025 | Assam University</title>
-  <link rel="stylesheet" href="{% static 'css/styles1.css' %}">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
