--- a/conference/static/css/styles1.css
+++ b/conference/static/css/styles1.css
@@ -61,13 +61,14 @@ body {
 
 .nav-links a.active,
 .nav-links a:hover {
-  color: var(--accent-color);
+  color: #FFFF00;
 }
+
 
 /* HERO */
 .hero {
   position: relative;
-  background: url("../images/bhutan-mountains2.jpg") no-repeat center center;
+  background: url("../images/bhutan-mountains.jpg") no-repeat center center;
   background-size: cover;
   height: 100vh;
   display: flex;
@@ -80,7 +81,7 @@ body {
 .overlay {
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0, 0, 0, 0.65); /* dark mask */
+  background: rgba(0, 0, 0, 0.45); /* dark mask */
   z-index: 1;
 }
 
@@ -102,11 +103,6 @@ body {
   font-size: 1rem;
   margin-top: 0.3rem;
   color: #ffe;
-}
-.hero h1,
-.hero p.collab,
-.hero .date {
-  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
 }
 
 .hero .date {
